[sc-8913] new ai models section (#1344)
* Move models from advanced KB settings to new AI models page

* Fix NucliaDB Admin:

- Redirect to KB selection when KB not found in NucliaDB admin
- don't call billing endpoint from NucliaDB admin
- don't call notification endpoint from NucliaDB admin
- Fix inSettings flag in navbar for NucliaDB Admin
- improve console.error format in rest methods

* Add AI models page in NucliaDB admin

  - Add route for AI models page in NucliaDB admin
  - Support new `getLearningSchema` in KB
  - Add error message when KB doesn't support learning configuration

* New schema endpoint for cloud

* KB creation from NucliaDB admin

* Add cypress markers on KB add dialog

* PR review

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -459,6 +459,36 @@
 	"getting-started.upload.link-textarea.help": "Un URL per línia",
 	"getting-started.upload.link-textarea.label": "Escriviu o enganxeu els URLs de les pàgines web",
 	"getting-started.upload.title": "1. Carregueu dades",
+	"kb.ai-models.anonymization_toggle.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
+	"kb.ai-models.anonymization_toggle.label": "Anonimatització",
+	"kb.ai-models.confirm-anonymization.confirm-button": "Anònim",
+	"kb.ai-models.confirm-anonymization.description": "Un cop anonimitzats els recursos, no es pot desfer. <br>Nota: la nova configuració d'anonimització no afectarà els recursos existents",
+	"kb.ai-models.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
+	"kb.ai-models.error.kb-not-supported": "El vostre Knowledge Box no admet models d'IA. Creeu un nou Knowledge Box per utilitzar aquesta funció.",
+	"kb.ai-models.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
+	"kb.ai-models.generative_model.label": "Generació de respostes",
+	"kb.ai-models.generative_model.system_prompt_label": "Comportament",
+	"kb.ai-models.page-description": "Configureu els models disponibles per a les vostres dades",
+	"kb.ai-models.page-title": "Models d'IA",
+	"kb.ai-models.pdf_annotation_toggle.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
+	"kb.ai-models.pdf_annotation_toggle.label": "Anotar per selecció",
+	"kb.ai-models.semantic.help": "El model semàntic depèn dels idiomes que heu seleccionat en crear aquest Knowledge Box",
+	"kb.ai-models.semantic.label": "Model semàntic",
+	"kb.ai-models.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
+	"kb.ai-models.summary.label": "Tipus de resum a demanda",
+	"kb.ai-models.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
+	"kb.ai-models.summary_model.label": "Resum a demanda",
+	"kb.ai-models.summary_prompt.examples": "Exemples",
+	"kb.ai-models.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
+	"kb.ai-models.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
+	"kb.ai-models.toasts.failure": "S'ha produït un error en desar la configuració.",
+	"kb.ai-models.toasts.success": "La nova configuració s'ha desat correctament.",
+	"kb.ai-models.use_own_key.label": "Utilitzeu la vostra pròpia clau per al model seleccionat",
+	"kb.ai-models.user_prompts.examples": "Exemples",
+	"kb.ai-models.user_prompts.prompt": "Prompt",
+	"kb.ai-models.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
+	"kb.ai-models.user_prompts.system": "Comportament personalitzat",
+	"kb.ai-models.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
 	"kb.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
 	"kb.create.failure": "Ho sento, definitivament alguna cosa no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
 	"kb.create.in_progress": "Creació de la Knowledge Box en curs...",
@@ -466,14 +496,6 @@
 	"kb.create.title": "Crea una Knowledge Box",
 	"kb.invalid-slug": "El Knowledge Box slug no és vàlid",
 	"kb.name": "Nom de la Knowledge Box",
-	"kb.settings.anonymization_toggle.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
-	"kb.settings.anonymization_toggle.label": "Anonimatització",
-	"kb.settings.confirm-anonymization.confirm-button": "Anònim",
-	"kb.settings.confirm-anonymization.description": "Un cop anonimitzats els recursos, no es pot desfer. <br>Nota: la nova configuració d'anonimització no afectarà els recursos existents",
-	"kb.settings.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
-	"kb.settings.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
-	"kb.settings.generative_model.label": "Generació de respostes",
-	"kb.settings.generative_model.system_prompt_label": "Comportament",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
@@ -490,30 +512,11 @@
 	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
 	"kb.settings.learning-options.summary-extended": "Resum detallat amb una llista de punts destacats i termes rellevants",
 	"kb.settings.learning-options.summary-simple": "Resum estàndard d'un parell de línies",
-	"kb.settings.models-section.advanced": "Avançat",
-	"kb.settings.models-section.title": "Models i prompts",
-	"kb.settings.pdf_annotation_toggle.help": "Permet seleccionar visualment algunes parts del disseny del document i anotar-les.",
-	"kb.settings.pdf_annotation_toggle.label": "Anotar per selecció",
-	"kb.settings.semantic.help": "El model semàntic depèn dels idiomes que heu seleccionat en crear aquest Knowledge Box",
-	"kb.settings.semantic.label": "Model semàntic",
 	"kb.settings.status.label": "Knowledge Box estat: <strong>{{state}}</strong>",
 	"kb.settings.status.private": "privada",
 	"kb.settings.status.published": "públic",
-	"kb.settings.summary.help": "Especifica el tipus de resum a demanda que s'ha de generar",
-	"kb.settings.summary.label": "Tipus de resum a demanda",
-	"kb.settings.summary_model.help": "Indiqueu el model utilitzat per la funció de resum a demanda",
-	"kb.settings.summary_model.label": "Resum a demanda",
-	"kb.settings.summary_prompt.examples": "Exemples",
-	"kb.settings.summary_prompt.prompt": "Sol·licitud de resum personalitzada",
-	"kb.settings.summary_prompt.prompt_help": "Defineix una indicació personalitzada que s'utilitzarà en lloc de la sol·licitud predeterminada quan es generi un resum.",
 	"kb.settings.toasts.failure": "S'ha produït un error en desar la configuració.",
 	"kb.settings.toasts.success": "La nova configuració s'ha desat correctament.",
-	"kb.settings.use_own_key.label": "Utilitzeu la vostra pròpia clau per al model seleccionat",
-	"kb.settings.user_prompts.examples": "Exemples",
-	"kb.settings.user_prompts.prompt": "Prompt",
-	"kb.settings.user_prompts.prompt_help": "Defineix la manera com volem que actuï el sistema quan fem una pregunta. Aquí podem definir regles més específiques, que fins i tot podrien anul·lar el comportament definit. Per exemple, podríem tenir una indicació que fa que el sistema només doni resultats en llistes, o fins i tot demani que respongui en un idioma determinat.",
-	"kb.settings.user_prompts.system": "Comportament personalitzat",
-	"kb.settings.user_prompts.system_help": "Defineix els trets generals de la personalitat de l'assistent o com s'ha de comportar quan respon a preguntes o durant una conversa. Per exemple, podríem definir que el sistema respondrà com a professional de la salut.",
 	"kb.users.already-exists": "Un usuari amb correu electrònic <strong>{{email}}</strong> ja existeix en aquesta Knowledge Box",
 	"kb.users.pending-invitation": "Invitació pendent: caduca el {{date}}",
 	"label-set.add": "Afegeix conjunt d'etiquetes",
@@ -591,6 +594,26 @@
 	"modal.upload.queue_length": "Mida de la cua",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
+	"navbar.account-home": "Panell",
+	"navbar.account-settings": "Compte",
+	"navbar.activity": "Registre d'activitat",
+	"navbar.advanced": "Avançat",
+	"navbar.ai-models": "Models d'IA",
+	"navbar.api_keys": "Claus API",
+	"navbar.classification": "Conjunts d'etiquetes",
+	"navbar.home": "Inici",
+	"navbar.list": "Llistat recursos",
+	"navbar.manage-kbs": "Knowledge Boxes",
+	"navbar.nua-keys": "Claus NUA",
+	"navbar.prompt-lab": "Prompt lab",
+	"navbar.settings": "Preferències",
+	"navbar.subscription": "Subscripció",
+	"navbar.sync": "Sincronitzar",
+	"navbar.synonyms": "Sinònims",
+	"navbar.trainings": "Entrenaments",
+	"navbar.upload-data": "Pujar dades",
+	"navbar.users": "Usuaris",
+	"navbar.widgets": "Widgets",
 	"need-help-book-demo": "Necessites ajuda? Reserva una demo!",
 	"ner-add-entity-dialog.title": "Afegeix NER",
 	"ner-family-dialog.family-color": "Color de la família NER",
@@ -830,25 +853,6 @@
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
 	"setup.set_password": "Estableix la contrasenya",
-	"sidenav.account-home": "Panell",
-	"sidenav.account-settings": "Compte",
-	"sidenav.activity": "Registre d'activitat",
-	"sidenav.advanced": "Avançat",
-	"sidenav.api_keys": "Claus API",
-	"sidenav.classification": "Conjunts d'etiquetes",
-	"sidenav.home": "Inici",
-	"sidenav.list": "Llistat recursos",
-	"sidenav.manage-kbs": "Knowledge Boxes",
-	"sidenav.nua-keys": "Claus NUA",
-	"sidenav.prompt-lab": "Prompt lab",
-	"sidenav.settings": "Preferències",
-	"sidenav.subscription": "Subscripció",
-	"sidenav.sync": "Sincronitzar",
-	"sidenav.synonyms": "Sinònims",
-	"sidenav.trainings": "Entrenaments",
-	"sidenav.upload-data": "Pujar dades",
-	"sidenav.users": "Usuaris",
-	"sidenav.widgets": "Widgets",
 	"standalone.menu.button-label": "Menú",
 	"standalone.menu.introspect": "Dades d'introspecció",
 	"standalone.menu.kb-list": "Knowledge Boxes",
