--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -460,6 +460,36 @@
 	"getting-started.upload.link-textarea.help": "One URL per line",
 	"getting-started.upload.link-textarea.label": "Type or paste web page URLs",
 	"getting-started.upload.title": "1. Upload data",
+	"kb.ai-models.anonymization_toggle.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all new resources in the Knowledge Box",
+	"kb.ai-models.anonymization_toggle.label": "Anonymization ",
+	"kb.ai-models.confirm-anonymization.confirm-button": "Anonymize",
+	"kb.ai-models.confirm-anonymization.description": "Once the resources are anonymized, it cannot be undone. <br>\nNote: new anonymization settings will not affect existing resources",
+	"kb.ai-models.confirm-anonymization.title": "Warning: future resources will be affected",
+	"kb.ai-models.error.kb-not-supported": "Your Knowledge Box doesn’t support AI models. Please create a new Knowledge Box to use this feature. ",
+	"kb.ai-models.generative_model.help": "Indicate the model used to generate answers to user questions.",
+	"kb.ai-models.generative_model.label": "Answer generation",
+	"kb.ai-models.generative_model.system_prompt_label": "Behavior",
+	"kb.ai-models.page-description": "Configure the available models for your data",
+	"kb.ai-models.page-title": "AI models",
+	"kb.ai-models.pdf_annotation_toggle.help": "Allow to visually select some parts of the document layout and annotate them.",
+	"kb.ai-models.pdf_annotation_toggle.label": "Annotate by selection",
+	"kb.ai-models.semantic.help": "The semantic model depends on the languages you selected while creating this Knowledge Box",
+	"kb.ai-models.semantic.label": "Semantic model",
+	"kb.ai-models.summary.help": "Specifies the kind of on-demand summary to be generated ",
+	"kb.ai-models.summary.label": "On-demand summary kind",
+	"kb.ai-models.summary_model.help": "Indicate the model used by the on-demand summarization feature",
+	"kb.ai-models.summary_model.label": "On-demand summarization",
+	"kb.ai-models.summary_prompt.examples": "Examples",
+	"kb.ai-models.summary_prompt.prompt": "Custom summarization prompt",
+	"kb.ai-models.summary_prompt.prompt_help": "Defines a custom prompt that will be used instead of the default prompt when generating a summary.",
+	"kb.ai-models.toasts.failure": "An error occurred when saving the settings.",
+	"kb.ai-models.toasts.success": "The new settings have been saved successfully.",
+	"kb.ai-models.use_own_key.label": "Use your own key for the selected model",
+	"kb.ai-models.user_prompts.examples": "Examples",
+	"kb.ai-models.user_prompts.prompt": "Prompt",
+	"kb.ai-models.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
+	"kb.ai-models.user_prompts.system": "Custom behavior",
+	"kb.ai-models.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
 	"kb.create.error": "Something went wrong when creating the Knowledge Box. Please try again.",
 	"kb.create.failure": "Something is wrong at the moment. Contact your administrator.",
 	"kb.create.in_progress": "Knowledge Box creation in progress…",
@@ -467,14 +497,6 @@
 	"kb.create.title": "Create a Knowledge Box",
 	"kb.invalid-slug": "Invalid Knowledge Box slug",
 	"kb.name": "Knowledge Box name",
-	"kb.settings.anonymization_toggle.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all new resources in the Knowledge Box",
-	"kb.settings.anonymization_toggle.label": "Anonymization ",
-	"kb.settings.confirm-anonymization.confirm-button": "Anonymize",
-	"kb.settings.confirm-anonymization.description": "Once the resources are anonymized, it cannot be undone. <br>\nNote: new anonymization settings will not affect existing resources",
-	"kb.settings.confirm-anonymization.title": "Warning: future resources will be affected",
-	"kb.settings.generative_model.help": "Indicate the model used to generate answers to user questions.",
-	"kb.settings.generative_model.label": "Answer generation",
-	"kb.settings.generative_model.system_prompt_label": "Behavior",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
@@ -491,30 +513,11 @@
 	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
 	"kb.settings.learning-options.summary-extended": "Detailed summary with a list of highlights and relevant terms",
 	"kb.settings.learning-options.summary-simple": "Standard summary of a couple of lines",
-	"kb.settings.models-section.advanced": "Advanced",
-	"kb.settings.models-section.title": "Models and prompts",
-	"kb.settings.pdf_annotation_toggle.help": "Allow to visually select some parts of the document layout and annotate them.",
-	"kb.settings.pdf_annotation_toggle.label": "Annotate by selection",
-	"kb.settings.semantic.help": "The semantic model depends on the languages you selected while creating this Knowledge Box",
-	"kb.settings.semantic.label": "Semantic model",
 	"kb.settings.status.label": "Knowledge Box status: <strong>{{state}}</strong>",
 	"kb.settings.status.private": "private",
 	"kb.settings.status.published": "public",
-	"kb.settings.summary.help": "Specifies the kind of on-demand summary to be generated ",
-	"kb.settings.summary.label": "On-demand summary kind",
-	"kb.settings.summary_model.help": "Indicate the model used by the on-demand summarization feature",
-	"kb.settings.summary_model.label": "On-demand summarization",
-	"kb.settings.summary_prompt.examples": "Examples",
-	"kb.settings.summary_prompt.prompt": "Custom summarization prompt",
-	"kb.settings.summary_prompt.prompt_help": "Defines a custom prompt that will be used instead of the default prompt when generating a summary.",
 	"kb.settings.toasts.failure": "An error occurred when saving the settings.",
 	"kb.settings.toasts.success": "The new settings have been saved successfully.",
-	"kb.settings.use_own_key.label": "Use your own key for the selected model",
-	"kb.settings.user_prompts.examples": "Examples",
-	"kb.settings.user_prompts.prompt": "Prompt",
-	"kb.settings.user_prompts.prompt_help": "Defines the way we want the system to act when we ask a question. Here we can define more specific rules, that could even override the defined behavior. For example, we could have a prompt that makes the system only give results in lists, or even ask to answer in a given language.",
-	"kb.settings.user_prompts.system": "Custom behavior",
-	"kb.settings.user_prompts.system_help": "Defines general personality traits of the assistant, or about how it should behave when answering questions/ during a conversation. For example, we could define that the system will answer as a health professional.",
 	"kb.users.already-exists": "A user with email <strong>{{email}}</strong> already exists in this knowledge Box",
 	"kb.users.pending-invitation": "Pending invitation: expires on {{date}}",
 	"label-set.add": "Add label set",
@@ -592,6 +595,26 @@
 	"modal.upload.queue_length": "Queue length",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
+	"navbar.account-home": "Dashboard",
+	"navbar.account-settings": "Account",
+	"navbar.activity": "Activity log",
+	"navbar.advanced": "Advanced",
+	"navbar.ai-models": "AI models",
+	"navbar.api_keys": "API keys",
+	"navbar.classification": "Label sets",
+	"navbar.home": "Home",
+	"navbar.list": "Resources list",
+	"navbar.manage-kbs": "Knowledge Boxes",
+	"navbar.nua-keys": "NUA keys",
+	"navbar.prompt-lab": "Prompt lab",
+	"navbar.settings": "Settings",
+	"navbar.subscription": "Subscription",
+	"navbar.sync": "Synchronize",
+	"navbar.synonyms": "Synonyms",
+	"navbar.trainings": "Trainings",
+	"navbar.upload-data": "Upload data",
+	"navbar.users": "Users",
+	"navbar.widgets": "Widgets",
 	"need-help-book-demo": "Need help? Book a demo!",
 	"ner-add-entity-dialog.title": "Add NER",
 	"ner-family-dialog.family-color": "NER family color",
@@ -831,25 +854,6 @@
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
 	"setup.set_password": "Set your password",
-	"sidenav.account-home": "Dashboard",
-	"sidenav.account-settings": "Account",
-	"sidenav.activity": "Activity log",
-	"sidenav.advanced": "Advanced",
-	"sidenav.api_keys": "API keys",
-	"sidenav.classification": "Label sets",
-	"sidenav.home": "Home",
-	"sidenav.list": "Resources list",
-	"sidenav.manage-kbs": "Knowledge Boxes",
-	"sidenav.nua-keys": "NUA keys",
-	"sidenav.prompt-lab": "Prompt lab",
-	"sidenav.settings": "Settings",
-	"sidenav.subscription": "Subscription",
-	"sidenav.sync": "Synchronize",
-	"sidenav.synonyms": "Synonyms",
-	"sidenav.trainings": "Trainings",
-	"sidenav.upload-data": "Upload data",
-	"sidenav.users": "Users",
-	"sidenav.widgets": "Widgets",
 	"standalone.menu.button-label": "Menu",
 	"standalone.menu.introspect": "Introspection data",
 	"standalone.menu.kb-list": "Knowledge Boxes",
