--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -459,6 +459,36 @@
 	"getting-started.upload.link-textarea.help": "Una URL por línea",
 	"getting-started.upload.link-textarea.label": "Escriba o pegue las URLs de páginas web",
 	"getting-started.upload.title": "1. Cargar datos",
+	"kb.ai-models.anonymization_toggle.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
+	"kb.ai-models.anonymization_toggle.label": "Anonimización",
+	"kb.ai-models.confirm-anonymization.confirm-button": "Anonimizar",
+	"kb.ai-models.confirm-anonymization.description": "Una vez que los recursos se anonimizan, no se puede deshacer. <br>Nota: la nueva configuración de anonimización no afectará los recursos existentes",
+	"kb.ai-models.confirm-anonymization.title": "Advertencia: los recursos futuros se verán afectados",
+	"kb.ai-models.error.kb-not-supported": "Su Knowledge Box no admite modelos de IA. Cree un nuevo Knowledge Box para utilizar esta función.",
+	"kb.ai-models.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
+	"kb.ai-models.generative_model.label": "Generación de respuesta",
+	"kb.ai-models.generative_model.system_prompt_label": "Comportamiento",
+	"kb.ai-models.page-description": "Configura los modelos disponibles para tus datos",
+	"kb.ai-models.page-title": "Modelos de IA",
+	"kb.ai-models.pdf_annotation_toggle.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
+	"kb.ai-models.pdf_annotation_toggle.label": "Anotar por selección",
+	"kb.ai-models.semantic.help": "El modelo semántico depende de los idiomas que seleccionó al crear esta Knowledge Box",
+	"kb.ai-models.semantic.label": "Modelo semántico",
+	"kb.ai-models.summary.help": "Especifica el tipo de resumen bajo demanda que debe generarse",
+	"kb.ai-models.summary.label": "Tipo de resumen bajo demanda",
+	"kb.ai-models.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
+	"kb.ai-models.summary_model.label": "Resumen bajo demanda",
+	"kb.ai-models.summary_prompt.examples": "Ejemplos",
+	"kb.ai-models.summary_prompt.prompt": "Petición de resumen personalizada",
+	"kb.ai-models.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
+	"kb.ai-models.toasts.failure": "Se produjo un error al guardar la configuración.",
+	"kb.ai-models.toasts.success": "La nueva configuración se ha guardado correctamente.",
+	"kb.ai-models.use_own_key.label": "Utilice su propia clave para el modelo seleccionado",
+	"kb.ai-models.user_prompts.examples": "Ejemplos",
+	"kb.ai-models.user_prompts.prompt": "Prompt",
+	"kb.ai-models.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
+	"kb.ai-models.user_prompts.system": "Comportamiento personalizado",
+	"kb.ai-models.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
 	"kb.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
 	"kb.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
 	"kb.create.in_progress": "Creación de la Knowledge Box en curso...",
@@ -466,14 +496,6 @@
 	"kb.create.title": "Crea una Knowledge Box",
 	"kb.invalid-slug": "El Knowledge Box slug no es válido",
 	"kb.name": "Nombre de la Knowledge Box",
-	"kb.settings.anonymization_toggle.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
-	"kb.settings.anonymization_toggle.label": "Anonimización",
-	"kb.settings.confirm-anonymization.confirm-button": "Anonimizar",
-	"kb.settings.confirm-anonymization.description": "Una vez que los recursos se anonimizan, no se puede deshacer. <br>Nota: la nueva configuración de anonimización no afectará los recursos existentes",
-	"kb.settings.confirm-anonymization.title": "Advertencia: los recursos futuros se verán afectados",
-	"kb.settings.generative_model.help": "Indique el modelo utilizado para generar respuestas a las preguntas de los usuarios.",
-	"kb.settings.generative_model.label": "Generación de respuesta",
-	"kb.settings.generative_model.system_prompt_label": "Comportamiento",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
@@ -490,30 +512,11 @@
 	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
 	"kb.settings.learning-options.summary-extended": "Resumen detallado con listado de puntos destacados y términos relevantes",
 	"kb.settings.learning-options.summary-simple": "Resumen estándar de un par de líneas.",
-	"kb.settings.models-section.advanced": "Avanzado",
-	"kb.settings.models-section.title": "Modelos y prompts",
-	"kb.settings.pdf_annotation_toggle.help": "Permita seleccionar visualmente algunas partes del diseño del documento y anotarlas.",
-	"kb.settings.pdf_annotation_toggle.label": "Anotar por selección",
-	"kb.settings.semantic.help": "El modelo semántico depende de los idiomas que seleccionó al crear esta Knowledge Box",
-	"kb.settings.semantic.label": "Modelo semántico",
 	"kb.settings.status.label": "Knowledge Box estado: <strong>{{state}}</strong>",
 	"kb.settings.status.private": "privado",
 	"kb.settings.status.published": "público",
-	"kb.settings.summary.help": "Especifica el tipo de resumen bajo demanda que debe generarse",
-	"kb.settings.summary.label": "Tipo de resumen bajo demanda",
-	"kb.settings.summary_model.help": "Indique el modelo utilizado por la función de resumen bajo demanda",
-	"kb.settings.summary_model.label": "Resumen bajo demanda",
-	"kb.settings.summary_prompt.examples": "Ejemplos",
-	"kb.settings.summary_prompt.prompt": "Petición de resumen personalizada",
-	"kb.settings.summary_prompt.prompt_help": "Define un mensaje personalizado que se utilizará en lugar del mensaje predeterminado al generar un resumen.",
 	"kb.settings.toasts.failure": "Se produjo un error al guardar la configuración.",
 	"kb.settings.toasts.success": "La nueva configuración se ha guardado correctamente.",
-	"kb.settings.use_own_key.label": "Utilice su propia clave para el modelo seleccionado",
-	"kb.settings.user_prompts.examples": "Ejemplos",
-	"kb.settings.user_prompts.prompt": "Prompt",
-	"kb.settings.user_prompts.prompt_help": "Define la forma en que queremos que actúe el sistema cuando hacemos una pregunta. Aquí podemos definir reglas más específicas, que incluso podrían anular el comportamiento definido. Por ejemplo, podríamos tener una pregunta que haga que el sistema sólo dé resultados en listas, o incluso que pida responder en un idioma determinado.",
-	"kb.settings.user_prompts.system": "Comportamiento personalizado",
-	"kb.settings.user_prompts.system_help": "Define rasgos generales de la personalidad del asistente, o sobre cómo debe comportarse al responder preguntas/ durante una conversación. Por ejemplo, podríamos definir que el sistema responda como un profesional sanitario.",
 	"kb.users.already-exists": "Ya existe un usuario con correo electrónico <strong>{{email}}</strong> en esta Knowledge Box",
 	"kb.users.pending-invitation": "Invitación pendiente: expira el {{date}}",
 	"label-set.add": "Agregar conjunto de etiquetas",
@@ -591,6 +594,26 @@
 	"modal.upload.queue_length": "Tamaño de la cola",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
+	"navbar.account-home": "Tablero",
+	"navbar.account-settings": "Cuenta",
+	"navbar.activity": "Registro de actividad",
+	"navbar.advanced": "Avanzado",
+	"navbar.ai-models": "Modelos de IA",
+	"navbar.api_keys": "Claves de api",
+	"navbar.classification": "Conjuntos de etiquetas",
+	"navbar.home": "Inicio",
+	"navbar.list": "Listado de recursos",
+	"navbar.manage-kbs": "Knowledge Boxes",
+	"navbar.nua-keys": "Claves NUA",
+	"navbar.prompt-lab": "Prompt lab",
+	"navbar.settings": "Preferencias",
+	"navbar.subscription": "Suscripción",
+	"navbar.sync": "Sincronizar",
+	"navbar.synonyms": "Sinónimos",
+	"navbar.trainings": "Entrenamientos",
+	"navbar.upload-data": "Subir datos",
+	"navbar.users": "Usuarios",
+	"navbar.widgets": "Widgets",
 	"need-help-book-demo": "¿Necesitas ayuda? ¡Reserve una demo!",
 	"ner-add-entity-dialog.title": "Añadir NER",
 	"ner-family-dialog.family-color": "Color de la familia NER",
@@ -830,25 +853,6 @@
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
 	"setup.set_password": "Establece tu contraseña",
-	"sidenav.account-home": "Tablero",
-	"sidenav.account-settings": "Cuenta",
-	"sidenav.activity": "Registro de actividad",
-	"sidenav.advanced": "Avanzado",
-	"sidenav.api_keys": "Claves de api",
-	"sidenav.classification": "Conjuntos de etiquetas",
-	"sidenav.home": "Inicio",
-	"sidenav.list": "Listado de recursos",
-	"sidenav.manage-kbs": "Knowledge Boxes",
-	"sidenav.nua-keys": "Claves NUA",
-	"sidenav.prompt-lab": "Prompt lab",
-	"sidenav.settings": "Preferencias",
-	"sidenav.subscription": "Suscripción",
-	"sidenav.sync": "Sincronizar",
-	"sidenav.synonyms": "Sinónimos",
-	"sidenav.trainings": "Entrenamientos",
-	"sidenav.upload-data": "Subir datos",
-	"sidenav.users": "Usuarios",
-	"sidenav.widgets": "Widgets",
 	"standalone.menu.button-label": "Menú",
 	"standalone.menu.introspect": "Datos de introspección",
 	"standalone.menu.kb-list": "Knowledge Boxes",
