--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -506,6 +506,7 @@
 	"kb.settings.learning-options.enabled": "Activé",
 	"kb.settings.learning-options.gemini-pro": "Google Gemini Pro",
 	"kb.settings.learning-options.generative-multilingual-2023": "Mode sans génération",
+	"kb.settings.learning-options.mistral": "Mistral AI Mixtral",
 	"kb.settings.learning-options.multilingual-2023-08-16": "multilingual (alpha)",
 	"kb.settings.learning-options.nuclia-atlas-v1": "Nuclia Atlas",
 	"kb.settings.learning-options.nuclia-etna-v1": "Nuclia Etna",
