--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -61,7 +61,7 @@
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
-	"account.monthly_consumibles": "Monthly consumibles",
+	"account.monthly_consumables": "Monthly consumables",
 	"account.new_token": "New API key",
 	"account.nua_client": "Client name",
 	"account.nua_key_activity": "Nuclia Understanding API key activity log",
