--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -61,7 +61,7 @@
 	"account.logotip": "Logo",
 	"account.manage": "Gérer le compte",
 	"account.manage_account_users": "Gestion des comptes utilisateurs",
-	"account.monthly_consumibles": "Consommables mensuels",
+	"account.monthly_consumables": "Consommables mensuels",
 	"account.new_token": "Nouvelle clé API",
 	"account.nua_client": "Nom du client",
 	"account.nua_key_activity": "Journal des activités de la clé Nuclia Understanding API",
