--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -61,7 +61,7 @@
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
-	"account.monthly_consumibles": "Consumo mensuales",
+	"account.monthly_consumables": "Consumo mensuales",
 	"account.new_token": "Nueva clave API",
 	"account.nua_client": "Nombre del cliente",
 	"account.nua_key_activity": "Registro de actividad de la clave Nuclia Understanding API",
