[sc-8623] Download feedback CSV on dashboard

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -108,14 +108,15 @@
 	"accounts.no_users_found": "no existeix cap usuari amb aquest correu",
 	"accounts.users": "usuari/s",
 	"activity.actor": "Actor",
-	"activity.chat": "Preguntes i respostes generatives",
 	"activity.load-more": "Carrega més",
-	"activity.modified": "Modificats",
-	"activity.new": "Creats",
-	"activity.processed": "Processats",
 	"activity.resource": "Recurs",
-	"activity.search": "Consultes",
 	"activity.timestamp": "Segell de temps",
+	"activity.type.chat": "Preguntes i respostes generatives",
+	"activity.type.feedback": "Valoració dels usuaris",
+	"activity.type.modified": "Modificats",
+	"activity.type.new": "Creats",
+	"activity.type.processed": "Processats",
+	"activity.type.search": "Consultes",
 	"api-key-management.create-key.button": "Creeu una nova clau d'API",
 	"api-key-management.create-key.title": "Crea una clau d'API nova",
 	"api-key-management.description": "Important! Copieu i deseu la clau de l'API. Desapareixerà un cop afegit.",
