--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -109,14 +109,15 @@
 	"accounts.no_users_found": "no user with this email address",
 	"accounts.users": "user(s)",
 	"activity.actor": "Actor",
-	"activity.chat": "Questions & Generative answers",
 	"activity.load-more": "Load more",
-	"activity.modified": "Edited",
-	"activity.new": "Created",
-	"activity.processed": "Processed",
 	"activity.resource": "Resource",
-	"activity.search": "Queries",
 	"activity.timestamp": "Time stamp",
+	"activity.type.chat": "Questions & Generative answers",
+	"activity.type.feedback": "User feedback",
+	"activity.type.modified": "Edited",
+	"activity.type.new": "Created",
+	"activity.type.processed": "Processed",
+	"activity.type.search": "Queries",
 	"api-key-management.create-key.button": "Create a new API key",
 	"api-key-management.create-key.title": "Create new API key",
 	"api-key-management.description": "Important! Copy and save the API key. It will disappear once added.",
