--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -108,14 +108,15 @@
 	"accounts.no_users_found": "No hemos encontrado a ningún usuario con este correo",
 	"accounts.users": "usuario/s",
 	"activity.actor": "Actor",
-	"activity.chat": "Preguntas y respuestas generativas",
 	"activity.load-more": "Cargar más",
-	"activity.modified": "Modificados",
-	"activity.new": "Creados",
-	"activity.processed": "Procesados",
 	"activity.resource": "Recurso",
-	"activity.search": "Consultas",
 	"activity.timestamp": "Sello de tiempo",
+	"activity.type.chat": "Preguntas y respuestas generativas",
+	"activity.type.feedback": "Valoración de los usuarios",
+	"activity.type.modified": "Modificados",
+	"activity.type.new": "Creados",
+	"activity.type.processed": "Procesados",
+	"activity.type.search": "Consultas",
 	"api-key-management.create-key.button": "Crear una nueva clave API",
 	"api-key-management.create-key.title": "Crear nueva clave API",
 	"api-key-management.description": "¡Importante! Copie y guarde la clave API. Desaparecerá una vez añadido.",
