--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -109,14 +109,15 @@
 	"accounts.no_users_found": "aucun utilisateur avec cette adresse email",
 	"accounts.users": "utilisateur(s)",
 	"activity.actor": "Acteur",
-	"activity.chat": "Questions et réponses génératives",
 	"activity.load-more": "Charger plus",
-	"activity.modified": "Édite",
-	"activity.new": "Créé",
-	"activity.processed": "Traité",
 	"activity.resource": "Ressource",
-	"activity.search": "Requêtes",
 	"activity.timestamp": "Horodatage",
+	"activity.type.chat": "Questions et réponses génératives",
+	"activity.type.feedback": "Commentaires des utilisateurs",
+	"activity.type.modified": "Édite",
+	"activity.type.new": "Créé",
+	"activity.type.processed": "Traité",
+	"activity.type.search": "Requêtes",
 	"api-key-management.create-key.button": "Créer une nouvelle clé API",
 	"api-key-management.create-key.title": "Créer une nouvelle clé API",
 	"api-key-management.description": "Important! Copiez et enregistrez la clé API. Il disparaîtra une fois ajouté.",
