[sc-8771] Allow to customize Not enough data to answer

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -1039,6 +1039,8 @@
 	"widget.generator.advanced.generative-answer-category.hide-results.label": "Ocultar resultados",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Los resultados de full text no se utilizarán para generar respuestas.",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Sólo resultados semánticos",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.help": "Personaliza el mensaje que se muestra cuando no hay datos suficientes para generar una respuesta a la pregunta del usuario. Este campo admite código HTML.",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.label": "Mensaje de datos insuficientes",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Parece que no está utilizando ninguna variable en este mensaje de usuario, podría producir respuestas inconsistentes. Consulte los ejemplos de mensajes de usuario en la página de configuración.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Tendrá prioridad en el prompt de usuario definido en la configuración del Knowledge Box. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de usuario",
