--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -1039,6 +1039,8 @@
 	"widget.generator.advanced.generative-answer-category.hide-results.label": "Amagar resultats",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Els resultats de full text no s'utilitzaran per generar respostes",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Només resultats semàntics",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.help": "Personalitza el missatge que es mostra quan no hi ha dades suficients per generar una resposta a la pregunta de l'usuari. Aquest camp admet codi HTML.",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.label": "Missatge de dades insuficients",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Sembla que no utilitzeu cap variable en aquest indicador de l'usuari, pot produir respostes inconsistents. Comproveu els exemples d'indicacions de l'usuari a la pàgina de configuració.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Tindrà prioritat a el prompt de l'usuari definida a la configuració del Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt de l'usuari",
