--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1040,6 +1040,8 @@
 	"widget.generator.advanced.generative-answer-category.hide-results.label": "Hide results",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Full text results will not be used to generate answers",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Only semantic results",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.help": "Customize the message displayed when there's insufficient data to generate a response to the user's question. This field allows HTML markup.",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.label": "Not enough data message",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "It seems you are not using any variable in this user prompt, it might produce inconsistent answers. Please check the user prompt examples in the settings page.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "User prompt",
