--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1040,6 +1040,8 @@
 	"widget.generator.advanced.generative-answer-category.hide-results.label": "Masquer les résultats",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Les résultats full text ne seront pas utilisés pour générer les réponses",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Uniquement les résultats sémantiques",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.help": "Personnalisez le message affiché lorsque les données sont insuffisantes pour générer une réponse à la question de l'utilisateur. Ce champ autorise le balisage HTML.",
+	"widget.generator.advanced.generative-answer-category.not-enough-data-message.label": "Message de données insuffisant",
 	"widget.generator.advanced.generative-answer-category.prompt.error": "Il semble que vous n'utilisez aucune variable dans cette invite utilisateur, cela pourrait produire des réponses incohérentes. Veuillez vérifier les exemples d'invites utilisateur dans la page des paramètres.",
 	"widget.generator.advanced.generative-answer-category.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
 	"widget.generator.advanced.generative-answer-category.prompt.label": "Prompt utilisateur",
