--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -27,6 +27,8 @@
 	"pastanaga.datetime.minutesAgo": "Hace {{minutes}} minutos",
 	"pastanaga.datetime.one-minute-ago": "Hace 1 minuto",
 	"pastanaga.datetime.yesterday": "Ayer",
+	"upload.activity.date": "Fecha",
+	"upload.activity.event": "Mensaje",
 	"upload.add-connector": "Añadir conector",
 	"upload.authentication.fail": "Autenticación fallida",
 	"upload.authentication.success": "Autenticación exitosa",
