Set label for azure-mistral

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -499,6 +499,7 @@
 	"kb.invalid-slug": "Invalid Knowledge Box slug",
 	"kb.name": "Knowledge Box name",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
