--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -499,6 +499,7 @@
 	"kb.invalid-slug": "Knowledge Box slug invalide",
 	"kb.name": "Nom de la Knowledge Box",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
@@ -900,7 +901,7 @@
 	"stash.search": "Chercher",
 	"stash.search-toggle-answer": "Réponse générative",
 	"stash.search_users": "Ajouter un nouvel utilisateur",
-	"stash.search_users_add": "Voulez-vous vraiment ajouter cet utilisateur au compte ?",
+	"stash.search_users_add": "Voulez-vous vraiment ajouter cet utilisateur au compte ?",
 	"stash.settings.processes.classifier": "Formation sur l'intention de recherche d'étiquettes",
 	"stash.settings.processes.classifier_info": "Afin d'obtenir des suggestions de recherche d'étiquettes précises, le contenu existant doit être étiqueté. À mesure que davantage de contenu sera étiqueté, la formation s’améliorera. Vous pouvez créer de nouvelles étiquettes à partir de la page des familles d'étiquettes.",
 	"stash.settings.processes.ner": "Formation sur la reconnaissance des entités nommées",
